--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,36 @@
 .App {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
   text-align: center;
+}
+
+.main {
+  display: flex;
+  justify-content: center;
+}
+
+.button {
+  width: 60px;
+  height: 60px;
+  background-color: #dce9f5;
+  font-size: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-radius: 5px;
+  font-family: sans-serif;
+  cursor: pointer;
+}
+
+.count {
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  width: 50px;
+  max-height: 60px;
+  border-bottom: 3px solid #dce9f5;
+  border-top: 3px solid #dce9f5;
+  font-family: sans-serif;
 }
